--- a/Profiles/app/src/main/res/values-es/strings.xml
+++ b/Profiles/app/src/main/res/values-es/strings.xml
@@ -11,6 +11,7 @@
     <string name="finish_profile">Finalizar</string>
     <string name="next_profile">Siguiente</string>
     <string name="back_profile">Anterior</string>
+    <string name="default_attaching_img_error">Error intentando adjuntar imagen</string>
 
     <!-- Conjunto de Strings para el View GameSpinner -->
     <string-array name="Games">
