--- a/Profiles/app/src/main/res/values/strings.xml
+++ b/Profiles/app/src/main/res/values/strings.xml
@@ -18,6 +18,8 @@
     <string name="next_profile">Siguiente</string>
     <string name="back_profile">Anterior</string>
     <string name="default_attaching_img_error">Error intentando adjuntar imagen</string>
+    <string name="directory_name_corp_chat">chats</string>
+    <string name="directory_name_images">images</string>
 
     <!-- Conjunto de Strings para el View GameSpinner -->
     <string-array name="Games">
