--- a/Profiles/app/src/main/res/values/strings.xml
+++ b/Profiles/app/src/main/res/values/strings.xml
@@ -33,5 +33,6 @@
     <string name="default_sync_ok">Sincronizado Correctamente</string>
     <string name="default_sync_question">¿Desea sincronizar con el servidor?</string>
     <string name="default_logout">Cerrar Sessión</string>
+    <string name="default_search_profile">Consultar</string>
 
 </resources>
