--- a/Profiles/app/src/main/res/values-es/strings.xml
+++ b/Profiles/app/src/main/res/values-es/strings.xml
@@ -34,5 +34,6 @@
     <string name="default_sync_question">¿Desea sincronizar con el servidor?</string>
     <string name="default_logout">Cerrar Sessión</string>
     <string name="default_search_profile">Consultar</string>
+    <string name="default_loading_title">Espere un momento por favor...</string>
 
 </resources>
